--- a/frontend/templates/components/footer.html
+++ b/frontend/templates/components/footer.html
@@ -1,9 +1,7 @@
 <footer>
-    <div class="logo">
-        <a href="#">
-            <img src="static/images/logo.png" alt="logo">
-        </a>
-    </div>
+    <a class="logo" href="{{ url_for('home') }}">
+        <img src="static/images/logo.png" alt="logo">
+    </a>
 
     <div class="other-links">
 
