--- a/frontend/templates/components/navbar.html
+++ b/frontend/templates/components/navbar.html
@@ -1,14 +1,19 @@
 <nav>
-    <div class="logo">
-        <a href="#">
-            <img src="static/images/logo.png" alt="logo">
-        </a>
-    </div>
+    <a class="logo" href="{{ url_for('home') }}">
+        <img src="static/images/logo.png" alt="logo">
+    </a>
+
+
+<!-- <img src="https://cdn-icons-png.freepik.com/256/10024/10024438.png?uid=R65046554&ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt=""> -->
 
     <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#" class="btn nav-button">Get Started</a>
+        <div class="link">
+            <a href="{{ url_for('home') }}" class="{% if page == 'index' %} active {% endif %}">Home</a>
+            <a href="{{ url_for('about') }}" class="{% if page == 'about' %} active {% endif %}">About</a>
+            <a href="{{ url_for('contact') }}" class="{% if page == 'contact' %} active {% endif %}">Contact</a>
+        </div>
+        <div class="button">
+            <a href="{{ url_for('signup') }}" class="btn">Get Started</a>
+        </div>
     </div>
 </nav>
