--- a/frontend/templates/components/base.html
+++ b/frontend/templates/components/base.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
 
-    <link rel="icon" href="static/favicon/favicon.ico">
-    <link rel="stylesheet" href="static/css/base.css">
+    <link rel="icon" href="{{ url_for('static', path='favicon/favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/base.css') }}">
     {% block head_tags %} {% endblock %}
 </head>
 <body>
     {% include 'components/navbar.html' %}
+    {% include 'components/flash-message.html' %}
 
     <main>
         {% block content %} {% endblock %}
