--- a/frontend/templates/components/footer.html
+++ b/frontend/templates/components/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <a class="logo" href="{{ url_for('home') }}">
-        <img src="static/images/logo.png" alt="logo">
+        <img src="{{ url_for('static', path='images/logo.png') }}" alt="logo">
     </a>
 
     <div class="other-links">
