--- a/frontend/static/css/base.css
+++ b/frontend/static/css/base.css
@@ -10,7 +10,8 @@
 --success-color: rgba(47, 168, 108);
 --error-color: rgba(238, 107, 107);
 --info-color: rgb(236, 238, 107);
---padding: 20px 120px;
+--warning-color: rgb(249, 172, 109);
+--padding: 20px 180px;
 --padding-tab: 20px 50px;
 --padding-mobile: 20px;
 --box-shadow: 2px 4px 8px rgb(0, 0, 0, 0.3);
@@ -133,6 +134,134 @@ nav .nav-links .link a.active {
     color: var(--tertiary-color);
 }
 
+/* SEARCH BAR */
+nav .search-bar {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+nav .search-bar button {
+    background-color: var(--black-color);
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    margin-left: 10px;
+    width: 15%;
+}
+
+nav .search-bar input {
+    width: 80%;
+    padding: 5px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+}
+
+nav .search-bar input:focus {
+    outline: none;
+}
+
+nav .search-bar button img.icon {
+    height: 25px;
+    width: 25px;
+    background-size: cover;
+}
+
+
+/* DROPDOWN MENU */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width: 220px;
+}
+
+.dropdown .button {
+    height: 50px;
+    width: 50px;
+    border-radius: 40px;
+    overflow: hidden;
+    cursor: pointer;
+    border: 1px solid var(--primary-color);
+}
+
+.dropdown .button:hover {
+    border: 1px solid var(--secondary-color);
+}
+
+.dropdown .button img {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+}
+
+.dropdown .dropdown-content {
+    display: none;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    gap: 30px;
+    background-color: var(--black-color);
+    padding: 20px 30px;
+    border-radius: 10px;
+    position: absolute;
+    /* width: 18vw; */
+    width: 250px;
+    box-shadow: var(--box-shadow);
+    z-index: 1;
+}
+
+.dropdown-content .links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: start;
+    justify-content: start;
+}
+
+.dropdown-content .links a {
+    text-decoration: none;
+    color: var(--white-color);
+    font-size: 0.6rem;
+    text-align: left;
+}
+
+.dropdown-content .links a:hover {
+    color: var(--secondary-color);
+}
+
+.dropdown-content.hide {
+    display: none;
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+}
+
+.pic-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.profile-pic {
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    overflow: hidden;
+    cursor: pointer;
+    border: 1px solid var(--primary-color);
+}
+
+.profile-pic img {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+}
+
+
 /* MAIN CONTENT */
 /* main {
     padding: var(--padding);
@@ -143,9 +272,14 @@ section {
     width: 100%;
 }
 
+section:first-child {
+    margin-top: 10vh;
+}
+
 section > * {
     padding: var(--padding);
 }
+
 
 /* BUTTONS */
 a.btn, button.btn {
@@ -200,6 +334,35 @@ footer {
 }
 
 
+/* FLASH MESSAGES */
+.flash-message {
+    position: fixed;
+    top: 11vh;
+    right: 50px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 0.7rem;
+    width: 25%;
+    color: var(--white-color);
+}
+
+.flash-message.success {
+    background-color: var(--success-color);
+}
+
+.flash-message.error {
+    background-color: var(--error-color);
+}
+
+.flash-message.info {
+    background-color: var(--info-color);
+}
+
+.flash-message.warning {
+    background-color: var(--warning-color);
+}
+
+
 /* ------------------------------------------------------- */
 /* ------------------------------------------------------- */
 /* ------------------------------------------------------- */
@@ -215,6 +378,11 @@ footer {
         padding: var(--padding-tab);
     }
 
+    /* .dropdown {
+        width: 50%;
+    } */
+    
+
     .logo {
         width: 50%;
     }
@@ -225,6 +393,10 @@ footer {
 
     footer {
         padding: var(--padding-tab);
+    }
+
+    .flash-message {
+        width: 50%;
     }
 }
 
@@ -254,5 +426,9 @@ footer {
 
     footer {
         padding: var(--padding-mobile);
+    }
+
+    .flash-message {
+        width: 70%;
     }
 }
