--- a/frontend/templates/pages/external/index.html
+++ b/frontend/templates/pages/external/index.html
@@ -13,7 +13,7 @@
 
             <div class="cta">
                 <a href="{{ url_for('signup') }}" class="btn">Get Started</a>
-                <a href="#" class="report-btn">Report an Emergency now</a>
+                <a href="{{ url_for('report_emergency') }}" class="report-btn">Report an Emergency now</a>
             </div>
         </div>
     </div>
