--- a/frontend/static/css/profile.css
+++ b/frontend/static/css/profile.css
@@ -1,3 +1,7 @@
+#profile-page {
+    min-height: 100vh;
+}
+
 header h2 {
     text-align: center;
     font-size: 1.2rem;
@@ -11,7 +15,7 @@ header h2 {
     justify-content: space-between;
     gap: 40px;
     margin-bottom: 30px;
-    height: 70vh;
+    height: 100%;
 }
 
 .profile-card {
