--- a/frontend/templates/components/map.html
+++ b/frontend/templates/components/map.html
@@ -1,3 +1,47 @@
 <div id="map"></div>
 
-<script src="{{ url_for('static', path='js/map.js') }}"></script>
+<script>
+    fetch("https://ipinfo.io/json?token=45a0b01f8664a2")
+    .then((response) => response.json())
+    .then((jsonResponse) => {
+        // Convert `loc` string to a list of integers
+        let current_coordinates = jsonResponse.loc.split(',').map(coord => parseFloat(coord));
+
+        // Initialize the map
+        let map = L.map('map').setView(current_coordinates, 8);
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }).addTo(map);
+
+        // Add a marker to the map
+        L.marker(current_coordinates).addTo(map)
+            .bindPopup(`${jsonResponse.city}, ${jsonResponse.region}.`)
+            .openPopup();
+
+        // Deserialize the JSON data into a JavaScript variable
+        // const emergencyLocations = JSON.parse(`{{ emergency_locations | safe }}`);
+
+        // Use the data in your JavaScript code
+        // emergencyLocations.forEach(location => {
+           // L.marker(location.geo_location).addTo(map)
+           // .bindPopup(`${location.name}`)
+            // .openPopup();
+        //});
+
+        // Add a click listener for the map
+        var popup = L.popup();
+
+        function onMapClick(e) {
+            popup
+            .setLatLng(e.latlng)
+            .setContent("You clicked the map at " + e.latlng.toString())
+            .openOn(map);
+        }
+
+        map.on('click', onMapClick);
+    })
+    .catch((error) => {
+        console.error("Error fetching data:", error);
+    });
+</script>
