--- a/frontend/templates/components/base.html
+++ b/frontend/templates/components/base.html
@@ -21,7 +21,7 @@
         {% block content %} {% endblock %}
     </main>
 
-    {% include 'components/footer.html' %}
+    <!-- {% include 'components/footer.html' %} -->
     
     {% block script_tags %} {% endblock %}
 </body>
