--- a/frontend/templates/pages/user/dashboards/dashboard.html
+++ b/frontend/templates/pages/user/dashboards/dashboard.html
@@ -2,6 +2,7 @@
 
 {% block head_tags %}
 <link rel="stylesheet" href="{{ url_for('static', path='css/dashboard.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', path='css/agency.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -11,7 +12,7 @@
     {% elif user.role == 'Responder' %}
         {% include 'pages/user/dashboards/responder.html' %}
     {% elif user.role == 'Agency admin' %}
-        {% include 'pages/user/dashboards/agency.html' %}
+        {% include 'pages/user/agency/agency-base.html' %}
     {% endif %}
 </section>
 {% endblock %}
