--- a/frontend/templates/pages/user/dashboards/responder.html
+++ b/frontend/templates/pages/user/dashboards/responder.html
@@ -24,11 +24,9 @@
     
     <div class="map-section">
         <h2>Map View</h2>
-        <!-- <p>Current Location: {{ current_location }}</p> -->
-        <p>Current Location: Lagos</p>
-        <!-- Placeholder for map, e.g., Google Maps integration -->
-        <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed" frameborder="0" allowfullscreen></iframe>
+        <div class="map-placeholder">
+            <!-- Embed map or image here -->
+            {% include 'components/map.html' %}
         </div>
     </div>
     
